Finity 2.00 "Rickon" --- major enhancements

Changed:

Replaced DofAxis by Inflate. In the former setup, fnuction objects
featured shapes of type f.shape=(1,DofAxis,3), representing the fact
that evaluate of this object leads to an array of shape (1,ndofs,3),
where ndofs depends on the element. The DofAxis evaluated to the
indices to which the 2nd axis in this example should be scattered. In
the new setup shapes are either f.shape=(1,1000,3) or
g.shape=(1,~1000,3), the latter denoting that the actual shape <1000
is unknown at compile-time. The <g> object is typically wrapped in an
Inflate object <f> which holds a reference to the former DofAxis and
performs the scattering upon evaluation.

Chain. The f.chain function object member is replaced by
function.chain, which takes in any variable argument list and returns
a list of functions of which the first axis results from
concatenation. For example, if f.shape=(10,) and g.shape=(20,2), then
F, G = function.chain( f, g ) results in F.shape=(30,) and
G.shape=(30,2). Internal data structures are updated such that
evaluation of F will generate non-zeros in the top 10 entries,
evaluation of G in the bottom 20. Chain can handle evaluables as well
as static objects, which can be used to implement lagrange mutipliers.

Mixed integrands by addition. Function objects that result from chain
can be added and subtracted. Mixed integrands can thus be combined
into a single evaluable object to hand to integrate. The old
convention of grouping incompatible functions in a tuple has been
deprecated.

Context logging. The log module has received a major overhaul, which
resulted in some log levels shifting. The new priority ordering
related to the verbose property is:
  0. error
  1. warning
  2. path
  3. info
  4. progress
  5. debug
Notable addition is log.context, which does not generate output but
sets a context in which subsequent output is logged. A context is lost