@@ -285,12 +285,16 @@ class PyPlot( BasePlot ):
 
   def cspy( self, A, **kwargs ): 
     'Like pyplot.spy, but coloring acc to 10^log of absolute values, where [0, inf, nan] show up in blue.'
+    if not isinstance( A, numpy.ndarray ): A.toarray()
     A = numpy.log10( numpy.abs( A ) )
     B = numpy.isinf( A ) | numpy.isnan( A ) # what needs replacement
     A[B] = ~B if numpy.all( B ) else numpy.amin( A[~B] ) - 1.
-    self.pcolor( A, **kwargs )
+    self.pcolormesh( A, **kwargs )
     self.colorbar()
     self.ylim( self.ylim()[-1::-1] ) # invert y axis: equiv to MATLAB axis ij
+    self.xlabel( r'$j$' )
+    self.ylabel( r'$i$' )
+    self.title( r'$^{10}\log a_{ij}$' )
     self.axis( 'tight' )
 
 class DataFile( BasePlot ):
